# EventSystem

./: CMakeLists.txt  README.md
include/EventSystem/: Event.h  EventBus.h  EventCatagories.h  EventDispatcher.h  EventReciever.h  EventSystem.h
include/Messaging/: Message.h  Reciever.h  Router.h
src/: EventDispatcher.cpp  temp.cpp
test/: CMakeLists.txt
test/helpers/: TestMessage.cpp  TestReciever.cpp
test/src/: EventObject.test.cpp  Message.test.cpp  MessageTransmission.test.cpp  TestEvent.cpp
